--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [16, 18, 20]
+        node: [16, 18, 20, 22, 24]
         typescript:
           [
             "~4.6.4",
@@ -53,7 +53,7 @@ jobs:
       - name: 🚚 Install node_modules
         uses: ./.github/actions/install-node-modules
         with:
-          node-version: 18
+          node-version: 24
 
       - name: 🗑️ Clear lib directory
         run: rm -rf lib
