--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "json-schema-to-ts",
-  "version": "3.1.1",
+  "name": "@sroussey/json-schema-to-ts",
+  "version": "3.1.3",
   "description": "Infer typescript types from your JSON schemas!",
   "files": [
     "lib"
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "yarn test-type && yarn test-format && yarn test-unit && yarn test-unused-exports && yarn test-lint",
     "test-type": "tsc --noEmit",
-    "test-format": "yarn prettier . --check",
+    "test-format": "yarn prettier src --check",
     "test-unit": "jest --verbose --runInBand --collectCoverage --logHeapUsage --passWithNoTests",
     "test-unused-exports": "yarn ts-unused-exports ./tsconfig.json --excludePathsFromReport='src/index.ts;'",
     "test-lint": "yarn eslint --ext=js,ts .",
@@ -25,46 +25,46 @@
     "set-package-version": "ts-node scripts/setPackageVersion"
   },
   "dependencies": {
-    "@babel/runtime": "^7.18.3",
     "ts-algebra": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^20.5.7",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/plugin-transform-runtime": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-typescript": "^7.28.0",
+    "@babel/runtime": "^7.28.0",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^20.19.26",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "ajv": "^8.13.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "dependency-cruiser": "^11.18.0",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.4",
-    "eslint-plugin-jsdoc": "^46.4.6",
+    "ajv": "^8.17.1",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "dependency-cruiser": "^17.3.2",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.2",
+    "eslint-import-resolver-typescript": "^3.10.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jsdoc": "^46.10.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "^27.5.1",
-    "prettier": "^3.1.0",
-    "rollup": "^2.67.3",
-    "rollup-plugin-dts": "4.1.0",
-    "rollup-plugin-import-map": "^2.2.2",
-    "rollup-plugin-typescript-paths": "^1.4.0",
-    "ts-jest": "^28.0.2",
-    "ts-node": "^10.9.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "jest": "^30.2.0",
+    "prettier": "^3.7.4",
+    "rollup": "^2.79.2",
+    "rollup-plugin-dts": "6.3.0",
+    "rollup-plugin-import-map": "^3.0.0",
+    "rollup-plugin-typescript-paths": "^1.5.0",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "ts-toolbelt": "^9.6.0",
-    "ts-unused-exports": "^8.0.0",
-    "tsc-alias": "^1.8.8",
-    "typescript": "^4.5.5"
+    "ts-unused-exports": "^8.0.5",
+    "tsc-alias": "^1.8.16",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=16"
@@ -73,7 +73,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ThomasAribart/json-schema-to-ts.git"
+    "url": "git+https://github.com/sroussey/json-schema-to-ts.git"
   },
   "keywords": [
     "json",
@@ -85,5 +85,11 @@
   "bugs": {
     "url": "https://github.com/ThomasAribart/json-schema-to-ts/issues"
   },
-  "homepage": "https://github.com/ThomasAribart/json-schema-to-ts#readme"
+  "homepage": "https://github.com/ThomasAribart/json-schema-to-ts#readme",
+  "contributors": [
+    {
+      "name": "sroussey",
+      "url": "https://github.com/sroussey"
+    }
+  ]
 }
